--- a/client/index.html
+++ b/client/index.html
@@ -20,36 +20,29 @@
       <![endif]-->
       <!-- build:js({client,node_modules}) app/vendor.js -->
       <!-- bower:js -->
-      <script src="bower_components/jquery/dist/jquery.js"></script>
-      <script src="bower_components/angular/angular.js"></script>
-      <script src="bower_components/angular-resource/angular-resource.js"></script>
-      <script src="bower_components/angular-cookies/angular-cookies.js"></script>
-      <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-      <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-      <script src="bower_components/lodash/dist/lodash.compat.js"></script>
-      <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-      <script src="bower_components/d3/d3.js"></script>
-      <script src="bower_components/nvd3/build/nv.d3.js"></script>
-      <script src="bower_components/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js"></script>
-      <script src="bower_components/typeahead.js/dist/typeahead.bundle.js"></script>
-      <script src="bower_components/angular-typeahead/angular-typeahead.js"></script>
-      <script src="bower_components/spin.js/spin.js"></script>
-      <script src="bower_components/angular-spinner/angular-spinner.js"></script>
-      <script src="bower_components/angular-aria/angular-aria.js"></script>
+      <script src="../bower_components/jquery/dist/jquery.js"></script>
+      <script src="../bower_components/angular/angular.js"></script>
+      <script src="../bower_components/angular-resource/angular-resource.js"></script>
+      <script src="../bower_components/angular-cookies/angular-cookies.js"></script>
+      <script src="../bower_components/angular-sanitize/angular-sanitize.js"></script>
+      <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+      <script src="../bower_components/lodash/dist/lodash.compat.js"></script>
+      <script src="../bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+      <script src="../bower_components/d3/d3.js"></script>
+      <script src="../bower_components/nvd3/build/nv.d3.js"></script>
+      <script src="../bower_components/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js"></script>
+      <script src="../bower_components/typeahead.js/dist/typeahead.bundle.js"></script>
+      <script src="../bower_components/angular-typeahead/angular-typeahead.js"></script>
+      <script src="../bower_components/spin.js/spin.js"></script>
+      <script src="../bower_components/angular-spinner/angular-spinner.js"></script>
+      <script src="../bower_components/angular-aria/angular-aria.js"></script>
       <!-- endbower -->
       <!-- endbuild -->
 
       <!-- build:js({.tmp,client}) app/app.js -->
       <script src="app/app.js"></script>
       <!-- injector:js -->
-      <script src="app/main/about.js"></script>
-      <script src="app/main/camelCase.js"></script>
-      <script src="app/main/contact.js"></script>
       <script src="app/main/main.js"></script>
-      <script src="app/main/terms-and-privacy.js"></script>
-      <script src="components/footer/footer.js"></script>
-      <script src="components/modal/modal.js"></script>
-      <script src="components/navbar/navbar.js"></script>
       <!-- endinjector -->
       <!-- endbuild -->
 
