--- a/client/index.html
+++ b/client/index.html
@@ -42,6 +42,8 @@
       <script src="app/app.js"></script>
       <!-- injector:js -->
       <script src="app/main/main.js"></script>
+      <script src="components/footer/footer.js"></script>
+      <script src="components/header/header.js"></script>
       <!-- endinjector -->
       <!-- endbuild -->
 
