Add build: block for CSS gen, fix misc. errors. Fixes #14.

--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,11 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- build:css({.tmp,client}) app/app.css -->
     <link rel="stylesheet" href="app/app.css">
+      <!-- injector:css -->
+      <!-- endinjector -->
+    <!-- endbuild -->
 
   </head>
   <body ng-app="picnicApp">
