added autoscroll to keep the page at the top of the viewport when changing routes.

--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
 
   </head>
   <body ng-app="picnicApp">
-    <div ui-view=""></div>
+    <div ui-view=""  autoscroll="true"></div>
 
     <!--[if lt IE 9]>
       <script src="bower_components/es5-shim/es5-shim.js"></script>
